Added option to encrypt file

--- a/config.yaml
+++ b/config.yaml
@@ -7,6 +7,8 @@ paths:
   - "/home/terrorsys/.bash_history"
 # (bool) Declare if wants to encrypt the folder with the backup.
 encrypted: True
+# (string) Password to encrypt the backup
+encrypting_password: "test"
 # (string) Declare if the backup will be stored locally or in a cloud environment.
 source: "local"
 # (string) Declare where the backup is stored.
